--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
         run: npm install
       # 清空缓存
       - name: clear
-        run: npm clean
+        run: npm run clean
       # 打包项目
       - name: build
         run: npm run build
