feat: 代码高亮调整为 highlight。

--- a/_config.yml
+++ b/_config.yml
@@ -49,16 +49,16 @@ future: true
 highlight:
   enable: true
   line_number: true
-  auto_detect: false
+  auto_detect: true
   tab_replace: "  "
-  wrap: true
-  hljs: false
+  wrap: false
+  hljs: true
 prismjs:
   enable: false
   preprocess: true
   line_number: true
   tab_replace: ""
-
+# TOMORROW NIGHT
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
 # per_page: Posts displayed per page. (0 = disable pagination)
