--- a/source/_data/links.yml
+++ b/source/_data/links.yml
@@ -86,6 +86,8 @@
     url: https://loading.io/css/
   - title: Tailwidcss
     url: https://tailwindcss.com/
+  - title: uiverse css案例
+    url: https://uiverse.io/
 
 "vue":
   - title: Element UI
