--- a/_config.stellar.yml
+++ b/_config.stellar.yml
@@ -3,7 +3,7 @@ sidebar:
   widgets:
     #### 自动生成的页面 ####
     # 主页
-    home: search, welcome, recent,tagcloud, timeline # for home
+    home: search, welcome, recent,tagcloud, timeline,ad # for home
     # 博客索引页
     blog_index: search_blog, recent, timeline # for categories/tags/archives
     # 文档索引页
@@ -54,6 +54,23 @@ footer:
     github:
       icon: '<img src="https://gcore.jsdelivr.net/gh/cdn-x/placeholder@1.0.4/social/08a41b181ce68.svg"/>'
       url: https://github.com/Whbbit1999
+  sitemap:
+    "博客":
+      - "[近期](/)"
+      - "[分类](/categories/)"
+      - "[标签](/tags/)"
+      - "[归档](/archives/)"
+    "专栏":
+      - "[vscode基础配置](/wiki/vscode/index.html)"
+      - "[typescript基础](/wiki/typescript/index.html)"
+    "更多":
+      - "[友链](/)"
+      - "[关于本站](/about/)"
+      - "[文档站点](http://doc.whbbit.cn)"
+      - "[GitHub](https://github.com/Whbbit1999)"
+    "参与项目":
+      - "[licht](https://react.codeym.com/)"
+      - "[vue devui](https://github.com/DevCloudFE/vue-devui)"
   content: | # 支持 Markdown 格式
     本站由 [@Whbbit1999](/) 使用 [Stellar](https://github.com/xaoxuu/hexo-theme-stellar) 主题创建。
     本博客所有文章除特别声明外，均采用 [CC BY-NC-SA 4.0](https://creativecommons.org/licenses/by-nc-sa/4.0/) 许可协议，转载请注明出处。
@@ -81,3 +98,29 @@ color:
     title: "#fff" # 标题文本颜色
     text: "#eee" # 正文文本颜色
     code: "#ff7043" # 行内代码颜色
+
+inject:
+  head:
+    - <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/izitoast@1.4.0/dist/css/iziToast.min.css"> # 复制弹窗
+  script:
+    - <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/izitoast@1.4.0/dist/js/iziToast.min.js"></script> # 复制弹窗
+    - |
+      <script>
+          document.body.oncopy = function () {
+              iziToast.info({
+                  timeout: 4000, // 关闭弹窗的时间
+                // icon: 'Fontawesome', // 图标类别
+                  closeOnEscape: 'true', // 允许使用Esc键关闭弹窗
+                  transitionIn: 'bounceInLeft', // 弹窗打开动画
+                  transitionOut: 'fadeOutRight', // 弹窗关闭动画
+                  displayMode: 'replace', // 替换已经打开的弹窗
+                  layout: '2', // Medium模式
+                  position: 'topRight', // 弹窗位置
+                  //icon: 'fad fa-copy', // 图标类名
+                  iconUrl:'https://image-1309791158.cos.ap-guangzhou.myqcloud.com/其他/1122star.svg',
+                  backgroundColor: '#40BF43', // 弹窗背景色
+                  title: '宝，复制成功了', // 通知标题
+                  message: '我的原则，只有三个字，看心情' // 通知消息内容
+              });
+          }
+      </script>
