--- a/source/_data/links.yml
+++ b/source/_data/links.yml
@@ -100,6 +100,8 @@
     url: https://tailwindcss.com/
   - title: loading
     url: https://cssloaders.github.io/
+  - title: daisyui
+    url: https://daisyui.com/
 
 "vue":
   - title: Element UI
