feat: 添加评论功能

--- a/_config.stellar.yml
+++ b/_config.stellar.yml
@@ -144,3 +144,8 @@ inject:
               });
           }
       </script>
+
+comments:
+  service: beaudar
+  beaudar:
+    repo: Whbbit1999/wxw-blog-comments
