--- a/_config.stellar.yml
+++ b/_config.stellar.yml
@@ -152,9 +152,9 @@ comments:
   giscus:
     data-repo: Whbbit1999/wxw-blog-comments # [在此输入仓库]
     data-repo-id: R_kgDOI34URg # [在此输入仓库 ID]
-    data-category: # [在此输入分类名]
-    data-category-id:
-    data-mapping: pathname
+    data-category: General # [在此输入分类名]
+    data-category-id: DIC_kwDOI34URs4CT54G
+    data-mapping: title
     data-strict: 0
     data-reactions-enabled: 1
     data-emit-metadata: 0
