--- a/_config.stellar.yml
+++ b/_config.stellar.yml
@@ -125,31 +125,11 @@ style:
     button: "hsl(192 98% 55%)" # 按钮颜色
     hover: "hsl(14 100% 57%)" # 按钮高亮颜色
 
-inject:
-  head:
-    - <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/izitoast@1.4.0/dist/css/iziToast.min.css"> # 复制弹窗
-  script:
-    - <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/izitoast@1.4.0/dist/js/iziToast.min.js"></script> # 复制弹窗
-    - |
-      <script>
-          document.body.oncopy = function () {
-              iziToast.info({
-                  timeout: 4000, // 关闭弹窗的时间
-                // icon: 'Fontawesome', // 图标类别
-                  closeOnEscape: 'true', // 允许使用Esc键关闭弹窗
-                  transitionIn: 'bounceInLeft', // 弹窗打开动画
-                  transitionOut: 'fadeOutRight', // 弹窗关闭动画
-                  displayMode: 'replace', // 替换已经打开的弹窗
-                  layout: '2', // Medium模式
-                  position: 'topRight', // 弹窗位置
-                  //icon: 'fad fa-copy', // 图标类名
-                  iconUrl:'https://image-1309791158.cos.ap-guangzhou.myqcloud.com/其他/1122star.svg',
-                  backgroundColor: '#40BF43', // 弹窗背景色
-                  title: '宝，复制成功了', // 通知标题
-                  message: '我的原则，只有三个字，看心情' // 通知消息内容
-              });
-          }
-      </script>
+# inject:
+#   head:
+#     - <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/izitoast@1.4.0/dist/css/iziToast.min.css"> # 复制弹窗
+#   script:
+#     - <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/izitoast@1.4.0/dist/js/iziToast.min.js"></script> # 复制弹窗
 
 comments:
   service: giscus
