--- a/_config.stellar.yml
+++ b/_config.stellar.yml
@@ -131,6 +131,7 @@ style:
 #   script:
 #     - <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/izitoast@1.4.0/dist/js/iziToast.min.js"></script> # 复制弹窗
 
+# comments
 comments:
   service: giscus
   # giscus
