--- a/_config.yml
+++ b/_config.yml
@@ -49,10 +49,10 @@ future: true
 highlight:
   enable: true
   line_number: true
-  auto_detect: true
+  auto_detect: false
   tab_replace: "  "
-  wrap: false
-  hljs: true
+  wrap: true
+  hljs: false
 prismjs:
   enable: false
   preprocess: true
