feat: 驾照考试资料

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Site
 title: WxW
-avatar: "https://avatars.githubusercontent.com/u/60510247?s=400&u=4f27010509b4739088fb9aa92e040b23f0e8d225&v=4"
+avatar: "/assets/codelogo-fill.png"
 subtitle: "月空网 | 月空人"
 description: ""
 keywords:
