feat: 配置文件更新

--- a/source/_data/projects.yml
+++ b/source/_data/projects.yml
@@ -61,8 +61,8 @@ sable:
   sections:
     "快速开始": [0, 99]
     "基本使用": [100, 199]
-    "文档系统": [200, 299]
-    "进阶设定": [900, 999]
+    "代码精简": [200, 299]
+    # "进阶设定": [900, 999]
 
 设计模式:
   index: false
