--- a/source/_data/links.yml
+++ b/source/_data/links.yml
@@ -119,6 +119,11 @@
     screenshot: /assets/sites/default-cover.svg
     avatar: /assets/sites/default-logo.svg
     description:
+  - title: d.design 堆友
+    url: https://d.design/
+    screenshot: /assets/sites/default-cover.svg
+    avatar: /assets/sites/default-logo.svg
+    description: 
 
 "颜色相关":
   - title: 中国传统色
