feat: 更新stellar主题，配置代码块复制功能

--- a/_config.stellar.yml
+++ b/_config.stellar.yml
@@ -142,3 +142,8 @@ comments:
     data-lang: zh-CN
     data-loading: lazy
     crossorigin: anonymous
+
+CodeBlock:
+  show_copy: true
+  default_text: "copy"
+  success_text: "copied"
